# cys-stift

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  STABILITY-EVIDENCE-SUMMARY.json  STABILITY-EVIDENCE-SUMMARY.md  STABILITY-EXECUTION-REPORT.md  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: ralph-loop.local.md
.github/: release-preview.md  release-stable.md
.github/workflows/: ci.yml  release-preview.yml  release-stable.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: CLAUDE.md  next.config.ts  package.json  tsconfig.json  vitest.config.ts
benchmarks/intent-ir-v1/: README.md  requests-v1.jsonl
docs/: INTERNAL-DOCS.md  STATE.md  ai-direction.md  changelog.md  evaluation-2026-06-21.md  product-and-engine.md  product-brief.md  reference.md
scripts/: _blockrefs-probe.mjs  _canvas-usability-probe.mjs  _data-reliability-probe.mjs  _data-reliability2-probe.mjs  _graph-probe.mjs  _phase3-probe.mjs  _relation-builder-probe.mjs  _whiteboard-probe.mjs  archive-detail-shots.cjs  arrow-interaction-probe.mjs  audit-glm.sh  batch-soft-delete-confirm-shots.cjs  canvas-interaction-probe.mjs  canvas-refactor-shots.cjs  check-doc-links.mjs  dark-mode-shots.cjs  design-guard.sh  f2-canvas-test.cjs  gen-decisions-index.mjs  gen-state.mjs  gen-version.mjs  import-rollback-shots.cjs  m1-relations-shots.cjs  m2-shots.cjs  m3-shots.cjs  min-test.cjs  multi-canvas-shots.cjs  p2-shots.cjs  p3-shots.cjs  p4-shots.cjs  p5-export-shots.cjs  p5-shots.cjs  p6-shots.cjs  p6.5a-shots.cjs  p6.5b-shots.cjs  p6.5c-shots.cjs  p6.5d-shots.cjs  p6.5e-shots.cjs  p6.5f-shots.cjs  p6.5g-shots.cjs  (+26 more)
(+670 files in other folders)
