[package]
name = "cys-stift"
version = "0.1.0"
description = "cy's Stift — local-first inspiration canvas"
authors = ["cy"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cys_stift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-global-shortcut = "2"
# 导出 helper(Android):WebView 不处理 <a download> 的 Blob URL → 静默失败。
# 用 dialog save(SAF picker,绕 scoped storage)+ fs writeFile 写用户选位置。
# 桌面也装(统一 helper;桌面路径仍走 Blob + a.click,不调插件),v2 对齐主版本。
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Android 无 native-tls 后端,Tauri 的间接依赖 reqwest 走 rustls,且 reqwest 默认
# rustls-no-provider(无 crypto provider)。启动建 reqwest Client 会 panic
# "No rustls crypto provider is configured" → app 闪退。装 ring provider
# (见 lib.rs::run 启动时 install_default)修复。桌面用 native-tls 不受影响。
# 用 ring 而非 aws_lc_rs:ring 纯 Rust+cc 免 cmake;aws_lc_rs 需 cmake(本机未装)。
[target.'cfg(target_os = "android")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
